# The-Schwarz-Forest

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
app/: 01_Temperature_Trends.py  schwarz-forest-app.py
data/gfc/: lossyear_schwarzwald_noDS.tif
data/raw/: stations_catalog_bw.csv
scripts/: build_parquet_once.py
