[project]
name = "schwarzwald-temperatures"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "geopandas>=1.1.1",
    "httpx>=0.28.1",
    "ipykernel>=7.1.0",
    "leafmap>=0.57.5",
    "matplotlib>=3.10.7",
    "numpy>=2.3.4",
    "osmnx>=2.0.6",
    "pandas>=2.3.3",
    "pandas-stubs>=2.3.2.250926",
    "pyarrow>=22.0.0",
    "pytest>=9.0.0",
    "rasterio>=1.4.3",
    "requests>=2.32.5",
    "rioxarray>=0.20.0",
    "scikit-learn>=1.7.2",
    "scipy>=1.16.3",
    "streamlit>=1.50.0",
    "streamlit-folium>=0.25.3",
    "wetterdienst>=0.114.3",
]
